# pkg/api/handler/admin.go
@@ -146,9 +146,9 @@ func (ad *AdminHandler) UnblockUser(c *gin.Context) {
 // @Failure 500 {object} response.Response{}
 // @Router /admin/user [get]
 func (ad *AdminHandler) ListUsers(c *gin.Context) {
-	page:=c.DefaultQuery("page","1")
-	count:=c.DefaultQuery("count","3")
-	users, err := ad.AdminUsecase.ListUsers(page,count)
+	page := c.DefaultQuery("page", "1")
+	count := c.DefaultQuery("count", "3")
+	users, err := ad.AdminUsecase.ListUsers(page, count)
 	if err != nil {
 		errRes := response.Responses(http.StatusInternalServerError, "internal server error", nil, err.Error())
 		c.JSON(http.StatusInternalServerError, errRes)
@@ -160,7 +160,7 @@ func (ad *AdminHandler) ListUsers(c *gin.Context) {
 
 // @Summary Admin Home
 // @Description Show Details Of Admin
-// @Tags User Management
+// @Tags Admin Home
 // @Accept json
 // @Produce json
 // @Security ApiKeyHeaderAuth
@@ -186,7 +186,7 @@ func (ad *AdminHandler) AdminHome(c *gin.Context) {
 
 // @Summary  Sales Report
 // @Description  Sales Report
-// @Tags Sales Report
+// @Tags Admin Home
 // @Accept json
 // @Produce json
 // @Security ApiKeyHeaderAuth
@@ -195,32 +195,32 @@ func (ad *AdminHandler) AdminHome(c *gin.Context) {
 // @Failure 500 {object} response.Response{}
 // @Router /admin/salesReport [get]
 func (ad *AdminHandler) SalesReport(c *gin.Context) {
-	keyword:=c.Query("keyword")
-	salesReport,err:=ad.AdminUsecase.SalesReport(keyword)
-	if err!=nil{
-		errRes:=response.Responses(http.StatusInternalServerError,"internal server error",nil,err.Error())
-		c.JSON(http.StatusInternalServerError,errRes)
+	keyword := c.Query("keyword")
+	salesReport, err := ad.AdminUsecase.SalesReport(keyword)
+	if err != nil {
+		errRes := response.Responses(http.StatusInternalServerError, "internal server error", nil, err.Error())
+		c.JSON(http.StatusInternalServerError, errRes)
 		return
 	}
-	succRes:=response.Responses(http.StatusOK,"successfully showing sales report",salesReport,nil)
-	c.JSON(http.StatusOK,succRes)
+	succRes := response.Responses(http.StatusOK, "successfully showing sales report", salesReport, nil)
+	c.JSON(http.StatusOK, succRes)
 }
 
 // @Summary Admin Dashboard
 // @Description Dashboard Of Admin
-// @Tags Dashboard
+// @Tags Admin Home
 // @Accept json
 // @Produce json
 // @Security ApiKeyHeaderAuth
 // @Failure 500 {object} response.Response{}
 // @Router /admin/dashboard [get]
 func (ad *AdminHandler) Dashboard(c *gin.Context) {
-	dashboard,err:=ad.AdminUsecase.Dashboard()
-	if err!=nil{
-		errRes:=response.Responses(http.StatusInternalServerError,"internal server error",nil,err.Error())
-		c.JSON(http.StatusInternalServerError,errRes)
+	dashboard, err := ad.AdminUsecase.Dashboard()
+	if err != nil {
+		errRes := response.Responses(http.StatusInternalServerError, "internal server error", nil, err.Error())
+		c.JSON(http.StatusInternalServerError, errRes)
 		return
 	}
-	succRes:=response.Responses(http.StatusOK,"successfully showing dashboard",dashboard,nil)
-	c.JSON(http.StatusOK,succRes)
+	succRes := response.Responses(http.StatusOK, "successfully showing dashboard", dashboard, nil)
+	c.JSON(http.StatusOK, succRes)
 }
